# extract_frames_tool

./: .gitignore  LICENSE  README.md  extract_frames.py  pyproject.toml  requirements-dev.txt  requirements.txt
frame_extractor/: __init__.py  cli.py  cvat_zip.py  extractor.py  filters.py  image_writer.py  logging_config.py  metadata.py  utils.py  validators.py  video_info.py
tests/: test_cli.py  test_extractor.py  test_filters.py  test_metadata.py  test_validators.py
