[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-frame-extractor"
version = "1.0.0"
description = "Production-oriented CLI for extracting CVAT-ready video frames"
requires-python = ">=3.10"
dependencies = ["opencv-python>=4.8", "numpy>=1.24", "Pillow>=10.0", "ImageHash>=4.3", "tqdm>=4.66"]

[project.scripts]
video-frame-extractor = "frame_extractor.cli:main"

[tool.setuptools.packages.find]
include = ["frame_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
